# CheatDeviceRemastered

./: .gitignore  CMakeLists.txt  README.md  build.sh  cheatdevice_names_lcs.ini  cheatdevice_names_vcs.ini  plugin.ini
Translations/: README  de_DE.ini  nl_NL.ini  pt_PT.ini  sample.ini
include/: blitn.h  cheats.h  config.h  editor.h  functions.h  lang.h  main.h  minGlue.h  utils.h
loader/: Makefile  README.md  exports.exp  main.c
source/: Makefile  blitn.c  blitn.h  cheats.c  cheats.h  config.c  config.h  editor.c  editor.h  exports.c  functions.c  functions.h  lang.c  lang.h  main.c  main.h  minIni.c  minIni.h  utils.c  utils.h
source/lang/: lang.c  lang.h
src/: CMakeLists.txt  blitn.c  cheats.c  config.c  editor.c  exports.c  functions.c  imports.S  lang.c  main.c  minIni.c  modinfo.S  utils.c
src/nanoprintf/: nanoprintf.c
translations/: README  README.md  de_DE.ini  es_ES.ini  nl_NL.ini  pt_PT.ini  sample.ini
